# tg_proxy

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: cd.yml  ci.yml
bot/: __init__.py  config.py  db.py  main.py
bot/app/: __init__.py  bootstrap.py  settings.py
bot/application/: ports.py
bot/application/services/: __init__.py  subscription_service.py
bot/domain/: models.py
bot/gateways/telegram/: __init__.py  keyboards.py  router.py  texts.py
bot/infrastructure/db/: postgres.py  repositories.py  schema.py
mtproxy/: README.md  docker-compose.yml
